all works / added properties
